force-app/main/default/objects/cf_Checklist_Instance__c/cf_Checklist_Instance__c.object-meta.xml
<CustomObject>
    <description>This is created/cloned from a template when needed</description>
    <label>Checklist Instance</label>
    <nameField>
        <label>Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>