force-app/main/default/objects/cf_Checklist_Instance__c/fields/Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links the instance back to its originating template.</inlineHelpText>
    <label>Checklist Template</label>
    <referenceTo>cf_Checklist_Template__c</referenceTo>
    <relationshipLabel>Checklist Instance Checklist Template</relationshipLabel>
    <relationshipName>Checklist_Instance_Checklist_Template</relationshipName>
    <type>Lookup</type>
</CustomField>