force-app/main/default/objects/cf_Checklist_Instance__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <description>Stores the 18 digit Task Record Id that the checklist instance record is assigned to.</description>
    <label>Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>