force-app/main/default/objects/cf_Checklist_Instance__c/fields/Task_uRL_Link__c.field-meta.xml
<CustomField>
    <fullName>Task_uRL_Link__c</fullName>
    <description>This is a link between this record and the Task associated to the record.</description>
    <label>Task uRL Link</label>
    <type>Url</type>
</CustomField>